# django-skeleton

./: .pylintrc  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: urls.py
app/management/commands/: mypy.py  pylint.py  pytest.py
app/models/: item.py
app/serializers/: item.py
app/viewsets/: item.py
config/: asgi.py  settings.py  wsgi.py
tests/: test_models.py  test_serializers.py  test_views.py
